hphp/hack/test/typecheck/private_static1.php.exp
File "private_static1.php", line 7, characters 20-24:
Private properties cannot be accessed with static:: since a child class may also have an identically named private member (Typing[4112])
  File "private_static1.php", line 4, characters 18-20:
  This property is private
